crates/test-files/fixtures/compile_errors/bad_visibility/src/foo.fe
type MyInt = i32

const MY_CONST: MyInt = 1

trait MyTrait {}

struct MyStruct {
    x: i32
}

fn my_func() {}

contract MyContract {
    x: i32
}

enum MyEnum {
    Some
    Thing
}